--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Grid System</title>
+    <title>JavaScript Operators Reference</title>
   </head>
   <body>
     <h1>JavaScript Operators Reference</h1>
